test/good/classes/struct04.px

class A''B' def
    Int x': 0

a''b' = A''B'()
a''b'.x' = 3
print a''b'.x'
