test/bad/classes/cmp02.px

class A def
    Int x

A(0) < A(0)
